syntax = "proto3";

option csharp_namespace = "Backoffice";

package backoffice;

service Executor {
  rpc Execute (ExecuteInput) returns (ExecuteResult);
}

message ExecuteInput{
  string commandOrQueryName = 1;
  string input = 2;
}

message ExecuteResult{
  string result = 1;
}